# elan-spi-fingerprint

./: .gitmodules  README.md  notes.txt
kmod/: Makefile  spifp.c  spifp.h
modprobe/: increase-spidev.conf
proto/: CMakeLists.txt  hkeyvalue.h  main.cpp  regtable.h  sensortable.h
tool/: .gitignore  getrepdsc.cpp  imgstat.py  printdump.py  process.ipynb
udev/: 99-elan-spi.rules
